--- a/Templates/blog.html
+++ b/Templates/blog.html
@@ -1,24 +1,26 @@
 {% extends "base.html" %}
 {% block content %}
-
-  <h1>Build-a-Blog</h1>
-  <form method='POST'>
-      <label>
-          New Blog:
-          <input type='text' name='Blog' />
-      </label>
-      <input type='submit' value='Add newpost'/>
-  </form>
-
-  <hr />
-
-  {% if newpost|length == 0 %}
-  <p>No newpost yet</p>
-
+<div>
+  <h1>{{title}}</h1>
+</div>
+<div>
+    {% if blogposts|length == 0 %}
+    <p>
+        <i>No newpost yet</i>
+    </p>
   {% else %}
+    <ul>
+        {% for post in blogposts%}
+        <li>
+            <a href ="./blog?id={{blog_post_content.id"}}>{{blog_post_content.blog_title}}</a>
+        </li>
+        <li>
+             {{blog_post_centent.blog_post}}
+        </li>
+        <br />
 
-    <ul
-        {% for task in newpost %}
-        <li>{{Blog</li>
-            {% endfor%}
+        {% endfor%}
     </ul>
+    {% endif %}
+</div>
+{% endblock %}
