--- a/Templates/single-post.html
+++ b/Templates/single-post.html
@@ -1,3 +1,10 @@
+{% extends "base.html" %}
+{% block style %}
+ h1 {
+    text-align: center;
+   }
+{% endblock %}
+
 {% block content %}
 <h1>{{blog_title}}</h1>
 <p>
