--- a/Templates/base.html
+++ b/Templates/base.html
@@ -5,26 +5,42 @@
         <style>
             nav {
                 text-align: center;
-                }
-            {% block style %}
-            {% endblock %}
+            } 
+            .error_message {
+                color: red;
+            }
+            {% block style %}{% endblock %}
         </style>        
         <title>{% block title %}{% endblock %}</title>
     </head>
 <body>
 
-<div class = "main-page">
+<div>
+<header>
+    <nav class = 'nav-bar'>
+        <a href ="{{url_for('index')}}">HOME</a>
+        <a href ="{{url_for('blog')}}">ALL POSTS</a>
+        <a href ="{{url_for('newpost')}}">NEW POST</a>
+        <a href ="{{url_for('login')}}">LOGIN</a>
+        <a href ="{{url_for('index')}}">LOGOUT</a>
+    </nav>
     <div>
-        <div class = "nav-bar"></div>
-            <a href ="{{url_for('blog')}}">HOME</a>
-            <a href ="{{url_for('newpost')}}">Make A new post</a>
-        </div>
+        {% block h1 %} {% endblock %}
     </div>
+</header>
+<main>
+    {% with messages = get_flashed_messages(with_category = True) %}
+       {% for category.message in messages %}
+          <p class = "{{error_message}}" >{{message}}</p>
+          <br />
+       {% endfor %}
+    {% endwith %}
+  {% block content %}
+{% endblock %}
+</main>
+      <footer>
 
-    <div>
-        {% block content %}
-        {% endblock %}
+      </footer>
     </div>
-</div>
 </body>
 </html>
