fixed typo in singleUser.html

--- a/Templates/singleUser.html
+++ b/Templates/singleUser.html
@@ -19,7 +19,7 @@
          </p>
          <p>
              <i>
-                 Written by <a href = './blog?user={{user_entry.author.username}}'>{{user_entry.owner}}</a>
+                 Written by <a href = './blog?user={{user_entry.owner.username}}'>{{user_entry.owner}}</a>
              </i>
          </p>
        {% endof %}
