--- a/Templates/base.html
+++ b/Templates/base.html
@@ -29,8 +29,8 @@
     </div>
 </header>
 <main>
-    {% with messages = get_flashed_messages(with_category = True) %}
-       {% for category.message in messages %}
+    {% with messages = get_flashed_messages(with_categories = True) %}
+       {% for category, message in messages %}
           <p class = "{{error_message}}" >{{message}}</p>
           <br />
        {% endfor %}
