--- a/Templates/login.html
+++ b/Templates/login.html
@@ -1,13 +1,12 @@
-{% extends 'base.html'%} {% block content %}
+{% extends 'base.html'%}
 {% block style %}
-
 {% endblock %}
 
 {% block h1 %}
 {% endblock %}
 
 {% block content %}
-<form action = '{{url_for('LOGIN')}}' method = 'POST'>
+<form action = '{{url_for('login')}}' method = 'POST'>
     <table>
         <thead>
             <tr>
